Fixed missing background on card

--- a/websites/classroom.google.com.css
+++ b/websites/classroom.google.com.css
@@ -4,7 +4,7 @@
    border-color: #90909080 !important;
 }
 
-.s2g3Xd, .vwNuXe, .VfPpkd-P5QLlc, .ysU8Le, .rHGeGc-O1htCb {
+.SUV7We, .s2g3Xd, .vwNuXe, .VfPpkd-P5QLlc, .ysU8Le, .rHGeGc-O1htCb {
    background-color: #08080875 !important;
 }
 
